--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "ts-nkeys",
-  "version": "1.0.16",
-  "description": "A public-key signature system based on Ed25519 for the NATS ecosystem in typescript for ts-nats and node-nats",
-  "main": "lib/nkeys.js",
-  "types": "lib/nkeys.d.ts",
+  "name": "nkeys.js",
+  "type": "module",
+  "version": "2.0.0",
+  "description": "A public-key signature system based on Ed25519 for the NATS ecosystem in javascript",
+  "main": "nkeys.mjs",
+  "types": "nkeys.d.ts",
   "scripts": {
-    "build": "npm run clean:dist && tsc && npm run copy:dist",
-    "clean": "npm run clean:dist",
-    "clean:dist": "rm -rf lib/* coverage/* .nyc_output/*",
-    "copy:dist": "cp lib/src/* lib/",
-    "cover:html": "nyc report --reporter=html && open coverage/index.html",
-    "cover:coveralls": "nyc report --reporter=lcovonly && cat ./coverage/lcov.info | coveralls",
-    "pack": "npm run build && npm pack",
-    "debugtest": "tsc && node node_modules/.bin/ava --verbose -T 6500000 --match",
-    "test": "tsc && nyc ava --verbose -T 15000"
+    "prepare": "deno bundle src/mod.ts nkeys.mjs"
   },
   "repository": {
     "type": "git",
@@ -22,12 +15,8 @@
   "keywords": [
     "nats",
     "Ed25519",
-    "node",
-    "typescript"
+    "javascript"
   ],
   "author": "The NATS Authors",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "tweetnacl": "^1.0.3"
-  }
+  "license": "Apache-2.0"
 }
