--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "nkeys.js",
-  "type": "module",
+  "name": "nkeys",
   "version": "2.0.0",
   "description": "A public-key signature system based on Ed25519 for the NATS ecosystem in javascript",
-  "main": "nkeys.mjs",
-  "types": "nkeys.d.ts",
+  "main": "lib/index.js",
   "scripts": {
-    "prepare": "deno bundle src/mod.ts nkeys.mjs"
+    "stage": "mkdir -p build && cp src/*.ts cjssrc/*.ts build/ && tsc",
+    "prepare": "npm run stage && deno bundle esmsrc/mod.ts nkeys.mjs && tsc"
   },
   "repository": {
     "type": "git",
@@ -18,5 +17,12 @@
     "javascript"
   ],
   "author": "The NATS Authors",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "@types/node": "^14.0.26",
+    "tweetnacl": "^1.0.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.0-dev.20200727"
+  }
 }
