--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "2.0.0",
   "description": "A public-key signature system based on Ed25519 for the NATS ecosystem in javascript",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "stage": "mkdir -p build && cp src/*.ts cjssrc/*.ts build/ && tsc",
-    "prepare": "npm run stage && deno bundle esmsrc/mod.ts nkeys.mjs && tsc"
+    "init": "mkdir -p build",
+    "clean": "rm -Rf build/ lib/ nkeys.d.ts nkeys.mjs",
+    "fmt": "deno fmt src/ examples/ modules/",
+    "cjs": "deno run --allow-all bin/cjs-fix-imports.ts -o build/ src/ modules/cjs/",
+    "stage": "npm run init && npm run cjs && tsc",
+    "prepare": "npm run stage && deno bundle modules/esm/mod.ts nkeys.mjs && tsc"
   },
   "repository": {
     "type": "git",
