--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,15 @@
-npm-debug.log
-build/
-bin/
-examples/
-modules/
-src/
-test/
-node_test/
-tsconfig.json
 .DS_Store
 .idea
-tsconfig.json
+bin/
+build/
+docs/
+examples/
 Makefile
+modules/
+node_test/
+npm-debug.log
+src/
+test/
 TODO
+tsconfig.json
+typedoc.json
