--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
-    "typescript": "^4.0.0-dev.20200727",
-    "ts-node": "^8.10.2",
     "ava": "^3.11.0",
-    "typedoc": "^0.17.6"
+    "typedoc": "^0.17.6",
+    "typescript": "^4.0.0-dev.20200727"
   },
   "ava": {
     "failFast": true,
