--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -39,7 +39,7 @@ jobs:
         run: deno test --failfast
 
       - name: build nkeys.mjs
-        run: deno bundle src/mod.ts nkeys.mjs
+        run: deno bundle modules/esm/mod.ts nkeys.mjs
 
       - name: Release
         uses: softprops/action-gh-release@v1
