--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           TMPDIR: ${{ runner.temp }}
           CI: true
-        run: deno test --failfast
+        run: deno test --failfast test/
 
       - name: build nkeys.mjs
         run: deno bundle modules/esm/mod.ts nkeys.mjs
